--- a/templates/bumrah.html
+++ b/templates/bumrah.html
@@ -11,6 +11,7 @@
         <h1>Mumbai Indians</h1>
         <h1>Duniya Hila Denge Ham....!</h1>
         <h1><a href="{% url 'csk:rayudu' %}">Go to Csk Page</a></h1>
+        <h1><a href="{% url 'sachin' %}">Go to Sachin Page</a></h1>
     </center>
 </body>
 </html>
