--- a/templates/sachin.html
+++ b/templates/sachin.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chennai</title>
+    <title>India</title>
 </head>
 <body>
     <center>
-        <h1>Chennai Super Kings..</h1>
-        <h1>We won the 5th IPL cup....!</h1>
+        <h1>This is Master Blaster Sachin Page</h1>
+        <h1><a href="{% url 'csk:rayudu' %}">Go to Csk Page</a></h1>
         <h1><a href="{% url 'mumbai:bumrah' %}">Go to Mumbai Page</a></h1>
-        <h1><a href="{% url 'sachin' %}">Go to Sachin Page</a></h1>
     </center>
 </body>
 </html>
